--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-mcp>=0.9.0
+mcp>=1.2.0
 tinydb>=4.8.0
+sentence-transformers>=5.1.2
+transformers>=4.57.1
+numpy>=1.24.0
+qdrant-client>=1.7.0
 aiohttp>=3.9.0
+pydantic>=2.0.0
+requests>=2.32.0
